# metamodule-noi

./: .gitmodules  CMakeLists.txt  plugin-mm.json
NOI-VCVRACK/src/: Hellebore.cpp  Pruners.cpp  Sunflower.cpp  Wilt.cpp
metamodule-plugins/: NOI.mmplugin
src/: mutex-stub.hh
